--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
             <div class="menu">
                 <ul>
-                    <li><a href="#">COLLEGE</a></li>
+                    <li><a href="#">school</a></li>
                     <li><a href="#">EXAM</a></li>
                     <li><a href="#">COURSE</a></li>
                     <li><a href="#">CAREER</a></li>
